[W-83] Добавил csp заголовки

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,20 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"
         />
+        <% if (process.env.NODE_ENV === 'production') { %>
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src *; frame-src https://vk.com/app7473655; font-src *; connect-src 'self' https://*.herokuapp.com"
+        />
+        <% } %>
         <meta name="theme-color" content="#000000" />
         <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
         <title>VK Mini App Boilerplate</title>
     </head>
     <body>
         <div id="root"></div>
+        <% if (process.env.NODE_ENV !== 'production') { %>
         <script src="http://localhost:8097"></script>
+        <% } %>
     </body>
 </html>
