[W-179] Поправил отображение картинки

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <% if (process.env.NODE_ENV === 'production') { %>
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src *; frame-src https://vk.com/app7473655; font-src *; connect-src 'self' https://*.herokuapp.com https://*.tmweb.ru https://*.ingest.sentry.io; report-uri https://*.ingest.sentry.io"
+            content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src *; frame-src https://vk.com/app7473655; font-src *; connect-src 'self' https://*.herokuapp.com https://*.tmweb.ru https://obschak.ru https://*.ingest.sentry.io; report-uri https://*.ingest.sentry.io"
         />
         <% } %>
         <meta name="theme-color" content="#000000" />
